# anlp_final_project

./: .gitignore  README.md  environment.yml  pyproject.toml  task2.ipynb
code/: Part4.ipynb  task1.ipynb  task1_abstracts.ipynb  task2.ipynb  task2_lu.ipynb  task2_mistral.ipynb  task3.ipynb  task3_2.ipynb  task4.ipynb  utils.py
code/results/FacebookAI/roberta-base/: predictions.json
