[project]
name = "anlp-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.7.0",
    "fastparquet>=2024.11.0",
    "huggingface-hub>=0.33.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "pip>=25.1.1",
    "pyarrow>=20.0.0",
    "ruff>=0.11.13",
    "scikit-learn>=1.7.0",
    "sentence-transformers>=4.1.0",
    "torch>=2.7.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
